# threshold-exercises

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
001-prime-numbers/: CMakeLists.txt  main.c  main.h
001-prime-numbers/calculations/: brute_force.c  brute_force.h
001-prime-numbers/input_helpers/: input_helpers.c  input_helpers.h
001-prime-numbers/output_helpers/: output_helpers.c  output_helpers.h
001_prime_numbers/: CMakeLists.txt
001_prime_numbers/calculations/: brute_force.h
001_prime_numbers/input_helpers/: input_helpers.c  input_helpers.h
001_prime_numbers/output_helpers/: output_helpers.c  output_helpers.h
lib/: stream_helpers.c  stream_helpers.h
lib/stream_helpers/: CMakeLists.txt  stream_helpers.c  stream_helpers.h
